@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-10T00:52:09Z",
+  "timestamp" : "2025-04-11T00:52:28Z",
   "count_outdated" : 896,
   "uniques_outdated" : 503,
-  "count" : 905,
-  "uniques" : 512,
+  "count" : 907,
+  "uniques" : 514,
   "clones" : [
     {
       "timestamp": "2025-04-01T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-10T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
