@@ -1,3 +1,12 @@
+2025-04-11T00:52:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14393194104 # 610
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-11
+* notice: last 14d: unq all: 3 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 512 905
+* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 514 907
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-04-10]
+
 2025-04-10T00:52:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14369869057 # 609
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-10
